2008-10-14  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Another approach for the incubator workaround since it seems the
	old one is not enough.
	
2008-10-14  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/Log.py:

	Classes for handling reading and writing from/to logs

	* pycvsanaly2/Parser.py:
	* pycvsanaly2/ParserFactory.py:
	* pycvsanaly2/main.py:

	Change the way the parser is fed, the parser don't read the log
	anymore, it's read from the main who feeds the parser using the
	new LogReader.
	
2008-10-14  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/BzrParser.py:
	* pycvsanaly2/CVSParser.py:
	* pycvsanaly2/GitParser.py:
	* pycvsanaly2/SVNParser.py:
	* pycvsanaly2/Parser.py:

	Mark parse_line method as "private".
	
2008-10-13  Santiago Dueñas Domínguez  <sduenas@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Fix a typo.

2008-10-13  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Workaround to avoid stuff from the incubator apache repository.
	
2008-10-07  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/GitParser.py:

	Rework the git parser to support branches.
	
2008-10-07  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/DBContentHandler.py:
	* pycvsanaly2/Parser.py:
	* pycvsanaly2/Repository.py:

	For the SCMs where it's not possible to commit in more than one
	branch at the same time (in the same commit) we can just associate
	the branch to the commit instead of to every action.
	
2008-10-03  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/AsyncQueue.py:

	Add an optional timeout parameter to get method and raise a
	TimeOut exception when the queue is empty and the timeout is over.
	
	* pycvsanaly2/Parser.py:

	Fix a race condition when the thread finishes and we are waiting
	forever in get()
	